Improved handling of input file dimensions.
1. Improved handling of input file dimensions that are not used in pyflextrkr/idclouds_tbpf.py.

2. Added defining var_names_2d (a list of 2D variables) and returning to the pyflextrkr/matchtbpf_driver.py in pyflextrkr/matchtbpf_driver.py and pyflextrkr/matchtbradar_func.py.

3. Modified pyflextrkr/matchtbpf_driver.py to get var_names_2d from function return.

4. Updated several MCS Tb+PF config files to match updated dimension variable names.

--- a/config/config_gridrad_mcs_example.yml
+++ b/config/config_gridrad_mcs_example.yml
@@ -61,7 +61,7 @@ meltlevel_varname: 'ERAI_0C'
 clouddatasource: 'gpmir'
 radardatasource: 'gridrad'
 pfdatasource:  'wrf'  # flag for landmask convention to calculate PF land fraction
-t_dimname: 'time'
+time_dimname: 'time'
 x_dimname: 'lon'
 y_dimname: 'lat'
 z_dimname: 'height'
