--- a/config/config_wrf4km_mcs_tbpf_example.yml
+++ b/config/config_wrf4km_mcs_tbpf_example.yml
@@ -17,7 +17,7 @@ run_speed : True
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
 run_parallel: 1
-nprocesses : 4  # Number of processors to use if run_parallel=1
+nprocesses : 8  # Number of processors to use if run_parallel=1
 dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 timeout: 360  # [seconds] Dask timeout limit
 
@@ -61,11 +61,11 @@ tb_varname:  'tb'
 pcp_varname: 'rainrate'
 clouddatasource: 'model'
 pfdatasource:  'wrf'
+time_dimname: 'time'
 x_dimname: 'lon'
 y_dimname: 'lat'
-time_dimname: 'time'
-xcoord_name: 'lon2d'
-ycoord_name: 'lat2d'
+x_coordname: 'lon2d'
+y_coordname: 'lat2d'
 
 # Specify types of feature being tracked
 # This adds additional feature-specific statistics to be computed
