--- a/environment.yml
+++ b/environment.yml
@@ -16,10 +16,13 @@ dependencies:
   - joblib>=0.14
   - ipython>7.0
   - basemap
+  - xesmf
   - pip
   - astropy
   - wrf-python
   - colorcet
+  - colormath
   - seaborn
   - scikit-learn
   - ffmpeg
+  - xesmf
