Improved handling of time coordinates in input data.
1. Switched to using Pandas to convert time coordinate in input data to base_time (Epoch time), this should work better for data with non-standard format (e.g., no time coordinate). Codes changed:
pyflextrkr/idcells_reflectivity.py
pyflextrkr/idclouds_tbpf.py.

2. Added codes in pyflextrkr/idclouds_tbpf.py to handle non-standard data with no time variable/dimensions, where time will be estimated from the filename and the specified time_format in the config.

3. Added a function 'get_timestamp_from_filename_single' in pyflextrkr/ft_utilities.py.

4. Added 'time_coordname' in example config files to handle non-standard format data (e.g., time coordinate variable name is different from time dimension name).
Configs modified:
config/config_csapr500m_example.yml
config/config_nexrad500m_example.yml
config/config_imerg_mcs_tbpf_example.yml
config/config_model25km_mcs_tbpf_example.yml

--- a/config/config_csapr500m_example.yml
+++ b/config/config_csapr500m_example.yml
@@ -112,6 +112,7 @@ x_dimname: 'x'
 y_dimname: 'y'
 z_dimname: 'z'
 time_dimname: 'time'
+time_coordname: 'time'
 x_varname: 'x'
 y_varname: 'y'
 z_varname: 'z'
