--- a/config/config_model25km_mcs_tbpf_example.yml
+++ b/config/config_model25km_mcs_tbpf_example.yml
@@ -58,6 +58,7 @@ clouddatasource: 'model'
 pfdatasource:  'wrf'
 x_dimname: 'lon'
 y_dimname: 'lat'
+time_coordname: 'time'
 time_dimname: 'time'
 x_coordname: 'lon'
 y_coordname: 'lat'
