--- a/config/config_nexrad500m_example.yml
+++ b/config/config_nexrad500m_example.yml
@@ -17,7 +17,7 @@ run_mapfeature: True
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
 run_parallel: 1
-nprocesses: 12  # Number of processors to use if run_parallel=1
+nprocesses: 4  # Number of processors to use if run_parallel=1
 dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 timeout: 360  # [seconds] Dask timeout limit
 
@@ -112,6 +112,7 @@ x_dimname: 'x'
 y_dimname: 'y'
 z_dimname: 'z'
 time_dimname: 'time'
+time_coordname: 'time'
 x_varname: 'x'
 y_varname: 'y'
 z_varname: 'z'
