--- a/hm_wrf_tbradar_demo/config_wrf_mcs_tbradar_short.yml
+++ b/hm_wrf_tbradar_demo/config_wrf_mcs_tbradar_short.yml
@@ -6,25 +6,25 @@
 run_preprocess: False
 run_idfeature : True
 run_tracksingle : True
-run_gettracks : False # not needed
-run_trackstats : False
-run_identifymcs : False # needed
-run_matchpf : False # needed
-run_robustmcs : False # needed
-run_mapfeature : False # needed
-run_speed : False # needed
+run_gettracks : True # not needed
+run_trackstats : True
+run_identifymcs : True # needed
+run_matchpf : True # needed
+run_robustmcs : True # needed
+run_mapfeature : True # needed
+run_speed : True # needed
 
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
-run_parallel: 0
-nprocesses : 1  # Number of processors to use if run_parallel=1
+run_parallel: 1
+nprocesses : 5  # Number of processors to use if run_parallel=1
 # dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 dask_tmp_dir: '/scratch/tang584'  # Dask temporary directory if run_parallel=1
 timeout: 360  # [seconds] Dask timeout limit
 
 # Start/end date and time
 startdate: '20150506.0000'
-enddate: '20150506.0000'
+enddate: '20150506.0800'
 # enddate: '20150506.0800' # smallest possible to run all processing steps
 # enddate: '20150510.0000'
 
