--- a/hm_wrf_tbradar_demo/hermes_configs/hermes_server.yaml
+++ b/hm_wrf_tbradar_demo/hermes_configs/hermes_server.yaml
@@ -2,10 +2,13 @@
 devices:
   ram:
     mount_point: ""
-    capacity: 20GB
-    block_size: 512
-    # slab_sizes: [ 4KB, 16KB, 64KB, 1MB ]
-    slab_sizes: [ 512, 1KB, 2KB, 4KB ]
+    capacity: 40GB
+    block_size: 4KB
+    # slab_sizes: [ 1MB, 4MB, 16MB, 32MB ]
+    # slab_sizes: [ 8KB, 32KB, 128KB, 1MB ]
+    slab_sizes: [ 4KB, 16KB, 64KB, 1MB ]
+    # slab_sizes: [ 512, 1KB, 2KB, 4KB ]
+    # slab_sizes: [ 1KB, 2KB, 4KB, 8KB ]
     bandwidth: 6000MBps
     latency: 15us
     is_shared_device: false
@@ -13,10 +16,13 @@ devices:
 
   ssd:
     mount_point: "/scratch/tang584/hermes_slabs" 
-    capacity: 10GB
-    block_size: 512
-    # slab_sizes: [ 4KB, 16KB, 64KB, 1MB ]
-    slab_sizes: [ 512, 1KB, 2KB, 4KB ]
+    capacity: 40GB
+    block_size: 4KB
+    # slab_sizes: [ 1MB, 4MB, 16MB, 32MB ]
+    # slab_sizes: [ 8KB, 32KB, 128KB, 1MB ]
+    slab_sizes: [ 4KB, 16KB, 64KB, 1MB ]
+    # slab_sizes: [ 512, 1KB, 2KB, 4KB ]
+    # slab_sizes: [ 1KB, 2KB, 4KB, 8KB ]
     bandwidth: 1000MBps
     latency: 1200us
     is_shared_device: false
@@ -24,10 +30,13 @@ devices:
 
   pfs:
     mount_point: "/rcfs/projects/chess/tang584/hermes_slabs" #deception PFS (BeeGFS)
-    capacity: 10GB
-    block_size: 512 
-    # slab_sizes: [ 4KB, 16KB, 64KB, 1MB ]
-    slab_sizes: [ 512, 1KB, 2KB, 4KB ]
+    capacity: 40GB
+    block_size: 4KB 
+    # slab_sizes: [ 1MB, 4MB, 16MB, 32MB ]
+    # slab_sizes: [ 8KB, 32KB, 128KB, 1MB ]
+    slab_sizes: [ 4KB, 16KB, 64KB, 1MB ]
+    # slab_sizes: [ 512, 1KB, 2KB, 4KB ]
+    # slab_sizes: [ 1KB, 2KB, 4KB, 8KB ]
     bandwidth: 100MBps 
     latency: 200ms
     is_shared_device: true
@@ -37,14 +46,14 @@ rpc:
   host_file: "/people/tang584/scripts/PyFLEXTRKR/hm_wrf_tbradar_demo/host_ip"
   host_names: []
   protocol: "ucx+rc_verbs"
-  domain: ""
+  domain: "mlx5_0:1"
   port: 8080
   num_threads: 4
 
 # rpc:
 #   host_file: "/qfs/people/tang584/scripts/local-co-scheduling/host_ip" # myhost host_ip
-#   base_name: "dl"
-#   host_number_range: [10]
+#   base_name: "dc00"
+#   host_number_range: [dc019]
 #   suffix: #".ibnet"
 #   protocol: "ucx+rc_verbs" #"ofi+sockets" #"ucx+ud" #"ucx+rc_verbs"
 #   domain: "mlx5_2:1" #mlx5_2:1 #mlx5_0:1
@@ -54,6 +63,18 @@ rpc:
 buffer_organizer:
   num_threads: 1
   port: 8081
+  flush_period: 1000 #1024
+  blob_reorg_period: 5000 #1024
+  # recency_min: 0
+  # recency_max: 60
+  # freq_max: 15
+  # freq_min: 0
+
+# prefetch:
+#   enabled: false
+#   apriori_schema_path: ""
+#   epoch_ms: 50
+#   is_mpi: false
 
 dpe:
   default_placement_policy: "MinimizeIoTime"
