--- a/config/config_dyamond_nicam_example.yml
+++ b/config/config_dyamond_nicam_example.yml
@@ -47,6 +47,7 @@ landmask_x_dimname: 'lon'
 landmask_y_dimname: 'lat'
 landmask_x_coordname: 'lon'
 landmask_y_coordname: 'lat'
+landfrac_thresh: [0, 90]  # Define the range of fraction for land (depends on what value is land the landmask file)
 
 # Input dataset structure
 pixel_radius:  10.0  # [km] Spatial resolution of the input data
@@ -57,7 +58,6 @@ olr_varname: 'rlut'
 tb_varname:  'Tb'
 pcp_varname: 'pr'
 clouddatasource: 'model'
-pfdatasource:  'imerg'
 time_dimname: 'time'
 x_dimname: 'lon'
 y_dimname: 'lat'
@@ -118,7 +118,6 @@ max_pf_majoraxis_thresh:  1800  # [km] MCS PF major axis length upper limit
 mcs_pf_durationthresh:  4  # [hour] PF minimum length of mcs
 mcs_pf_majoraxis_for_lifetime:  20  # [km] Minimum PF size to count PF lifetime
 mcs_pf_gap:  1  # [unitless] Allowable temporal gap in PF data for MCS characteristics
-landfrac_thresh: 90  # [%] Define threshold for PF land fraction
 
 # Specify rain rate parameters
 pf_rr_thres:  2.0  # Rain rate threshold [mm/hr]
