--- a/config/config_wrf4km_mcs_tbpf_example.yml
+++ b/config/config_wrf4km_mcs_tbpf_example.yml
@@ -17,7 +17,7 @@ run_speed : True
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
 run_parallel: 1
-nprocesses : 8  # Number of processors to use if run_parallel=1
+nprocesses : 24  # Number of processors to use if run_parallel=1
 dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 timeout: 360  # [seconds] Dask timeout limit
 
@@ -52,6 +52,7 @@ landmask_x_dimname: 'west_east'
 landmask_y_dimname: 'south_north'
 landmask_x_coordname: 'XLONG'
 landmask_y_coordname: 'XLAT'
+landfrac_thresh: [0.9, 1]  # Define the range of fraction for land (depends on what value is land the landmask file)
 
 # Input dataset structure
 pixel_radius:  4.0  # [km] Spatial resolution of the input data
@@ -60,7 +61,6 @@ datatimeresolution: 1.0  # [hour] Temporal resolution of the input data
 tb_varname:  'tb'
 pcp_varname: 'rainrate'
 clouddatasource: 'model'
-pfdatasource:  'wrf'
 time_dimname: 'time'
 x_dimname: 'lon'
 y_dimname: 'lat'
@@ -118,7 +118,6 @@ max_pf_majoraxis_thresh:  1800  # [km] MCS PF major axis length upper limit
 mcs_pf_durationthresh:  4  # [hour] PF minimum length of mcs
 mcs_pf_majoraxis_for_lifetime:  20  # [km] Minimum PF size to count PF lifetime
 mcs_pf_gap:  1  # [unitless] Allowable temporal gap in PF data for MCS characteristics
-landfrac_thresh: 90  # [%] Define threshold for PF land fraction
 
 # Specify rain rate parameters
 pf_rr_thres:  2.0  # Rain rate threshold [mm/hr]
