Cumulative updates in December 2023.
1. Fixed an old syntax issue in identifymcs.py (line 117).
2. Added a new option to specify a list of variable names in the config when regridding the MCS tracking masks from the coarsen grid back to the native input grid in regrid_tracking_mask.py.
3. Updated /Analysis/plot_subset_tbpf_mcs_tracks_demo.py to automatically calculate appropriate aspect ratio based on the lat/lon extent of the plotting region if figsize is not specified.
4. Added a new quicklook plot script to plot Tb+PF MCS tracking on a single panel: /Analysis/plot_subset_tbpf_mcs_tracks_1panel_demo.py

--- a/config/config_scream_mcs_tbradar_15min_template.yml
+++ b/config/config_scream_mcs_tbradar_15min_template.yml
@@ -32,16 +32,17 @@ time_format: 'yyyymoddThhmmss'
 databasename: 'obs_v4_2_'
 
 # Tracking input files directory
-clouddata_path: '/pscratch/sd/j/jli628/15min/CASE/'
+clouddata_path: '/pscratch/sd/f/feng045/HyperFACETS/derecho/scream_15min/FORCING/tb_radar/CASE/'
 # Working directory for the tracking data
-root_path: '/pscratch/sd/f/feng045/HyperFACETS/derecho/scream_15min/CASE/'
+root_path: '/pscratch/sd/f/feng045/HyperFACETS/derecho/scream_15min/FORCING/CASE/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
 stats_path_name: 'stats'
 pixel_path_name: 'mcstracking'
 
 # Land mask file
-landmask_filename: '/global/cfs/cdirs/m2637/zfeng/derecho/scream/map_data/ocean_mask.nc'
+# landmask_filename: '/global/cfs/cdirs/m2637/zfeng/derecho/scream/map_data/ocean_mask.nc'
+landmask_filename: '/pscratch/sd/f/feng045/HyperFACETS/derecho/scream_15min/maps/cean_mask.nc'
 landmask_varname: 'mask'
 landmask_x_dimname: 'lon'
 landmask_y_dimname: 'lat'
